--- a/main/res/layout/cell.xml
+++ b/main/res/layout/cell.xml
@@ -9,12 +9,44 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"/>
 
-    <ImageView
-        android:id="@+id/image_data"
+    <!--ここに拡張可能-->
+    <!--<TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:textSize="20dp"
+        android:text="test"/>
+
+    <Button
+        android:id="@+id/sifuto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toLeftOf="@+id/syuusi"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        android:text="シフト" />
+
+    <Button
+        android:id="@+id/syuusi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:text="収支" />
+
+    <Button
+        android:id="@+id/memo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@+id/syuusi"
+        android:layout_alignParentBottom="true"
+        android:text="メモ" />-->
 
 </RelativeLayout>
 
